overflow fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@ html {
 
 body {
   font-family: "PT Sans", sans-serif;
-  @apply bg-background;
+  @apply w-screen bg-background overflow-x-clip;
 }
 
 h2 {
